k8s/mail-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
  labels:
    app: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mail-service
          image: youseftaha11/mini-instapay:mail-service
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
