k8s/transaction-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: youseftaha11/mini-instapay:transaction-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  selector:
    app: transaction-service
  ports:
    - port: 3005
      targetPort: 3005
  type: ClusterIP
