k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instapay-ingress
  namespace: instapay
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /user/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /notification/
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3003
          - path: /account/
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3004
          - path: /bank/
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3004
          - path: /transaction/
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 3005
